# AeroSplat-4D

./: .gitignore  CLAUDE.md  README.md  environment.yml
isaacsim/: __init__.py  animate.py  asset_config.yaml  batch_config.yaml  batch_render.py  cam_intrinsics.yaml  config.yaml  config_utils.py  crop_depth.py  flight_path.py  headless_runner.py  load_drone.py  load_scene.py  position_cameras.py  render.py  render_utils.py  run_batch.sh  run_single.sh  runner.py
isaacsim/verify_assets/: run.sh  verify_assets.py
report/data/: 4DGS-architecture.md  Thesis - background & related work.drawio.xml  background_Related_work_structure.md  expanded_giga_overview.drawio.xml  expanded_giga_overview.md  notero.csv
report/paper/: 00a_abstract.tex  00b_preface.tex  00c_symbols.tex  01_introduction.tex  02_problem_setting.tex  03_background.tex  04_related_work.tex  (+12 more)
stage-1_fg-seg/: .gitignore  environment.yml  setup.py
stage-2_3DGS/objaverse/render/: .gitignore  main.py  pyproject.toml  single_uid.txt  verify_content.py
stage-2_3DGS/objaverse/render/scripts/render_blender/: README.md  blender_script.py  index.html  inspect_nodes.py  main.py  render.sh  render_objaverse1.py  render_to_torch.py  render_to_torch.sh  verify_renders.ipynb  verify_renders_torch.ipynb
stage-2_3DGS/objaverse/render/scripts/render_blender/debug/: conversion_config.json
stage-2_3DGS/objaverse/render/scripts/render_blender/debug/test/: index.json
stage-2_3DGS/objaverse/render/scripts/render_blender/debug/train/: index.json
stage-3_4D-classify/: 4D_CLASSIFICATION_DESIGN_PLAN.md  README.md
(+234 files in other folders)
