[project]
name = "objaverse-xl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    "tqdm",
    "loguru",
    "fsspec>=2022.11.0",
    "gputil==1.4.0",
    "fire",
    "setuptools",
    "pillow>=12.0.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "torch>=2.0.0",
    "openexr>=3.2.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
